<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manne.json.Activities.SignUpActivity"
    android:background="@drawable/background_iphone">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/left_icon"
        android:layout_margin="25dp"
        android:id="@+id/iconLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:background="@drawable/teorem_white"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/selector_shape5"
        android:layout_marginTop="160dp"
        android:layout_marginHorizontal="30dp"
        android:padding="20dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:backgroundTint="@color/red"
            android:id="@+id/first_name"
            android:textSize="15dp"
            android:singleLine="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:backgroundTint="@color/red"
            android:id="@+id/last_name"
            android:textSize="15dp"
            android:singleLine="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/red"
            android:id="@+id/email"
            android:textSize="15dp"
            android:singleLine="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:backgroundTint="@color/red"
            android:id="@+id/city"
            android:textSize="15dp"
            android:singleLine="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:id="@+id/prefix"
                android:textSize="15dp"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:backgroundTint="@color/red"
                android:id="@+id/phone_number"
                android:textSize="15dp"
                android:singleLine="true"
                />


        </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:backgroundTint="@color/red"
            android:id="@+id/username"
            android:textSize="15dp"
            android:singleLine="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@color/red"
            android:id="@+id/password"
            android:textSize="15dp"
            android:singleLine="true"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:backgroundTint="@color/red"
            android:id="@+id/confirm_pass"
            android:textSize="15dp"
            android:singleLine="true"
            android:inputType="textPassword"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            >
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchBar"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certify"
                android:textColor="@color/lightGray"
                android:layout_marginLeft="20dp"
                />



        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp">


        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Sign Up"
            android:background="@drawable/selector_shape1"
            android:id="@+id/signUpButton"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or Sing up via"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Facebook"
            android:textColor="@color/white"
            android:background="@drawable/selector_shape2"
            android:id="@+id/facebookButton"/>



    </LinearLayout>




</RelativeLayout>
