<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manne.json.Activities.ValidationActivity"
    >

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/left_icon"
        android:layout_margin="25dp"
        android:id="@+id/iconLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:background="@drawable/teorem_logo"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polite"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respect"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/counterfeiting"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="50dp"
            >


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchBar"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acknowledge"
                android:textColor="@color/lightGray"
                android:layout_marginLeft="20dp"
                />



        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="next"
            android:background="@color/yellow"
            android:id="@+id/buttonNext"/>

    </LinearLayout>



</RelativeLayout>
